fixed alignment in song list

--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ body {
 }
 
 #song-list container p {
-	padding: 1em;
+	padding: 1em 1em 1em 1.5em;
 	margin: 0;
 }
 
